refactored document